@@ -127,8 +127,8 @@ optimization.method_DB.nstep = 1
 optimization.method.derivatives = newton
 
 # Final optimization step, may be useful if numerical derivatives are used:
-# powell or simplex, leave the field empty for no final optimization step.
-optimization.final = 
+# powell or simplex or none.
+optimization.final = none 
 
 # Set the quantity of output to the screen:
 optimization.verbose = 3
